--- a/project/index.html
+++ b/project/index.html
@@ -11,7 +11,7 @@
         <ul>
           <a href="#home" id="link"><li>HOME</li></a>
           <a href="#gallery" id="link"><li>GALLERY</li></a>
-          <a href="#reservations" id="link"><li>RESERVATIONS</li></a>
+          <a href="#contact" id="link"><li>RESERVATIONS</li></a>
         </ul>
       </div>
     </div>
