--- a/project/basic_css_demo_1.html
+++ b/project/basic_css_demo_1.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Basic HTML</title>
     <meta charset="UTF-8">
+    <title>Basic HTML</title>
+    <link rel="stylesheet" href="./css/basic_style.css">
   </head>
   <body>
     <div>
       <h1>Basic CSS Demo</h1>
     </div>
 
-    <div class="containter">
+    <div class="container">
       <div class="squares">
         <p>Box 1</p>
       </div>
