--- a/One-Page Website/one_page_website.html
+++ b/One-Page Website/one_page_website.html
@@ -9,7 +9,8 @@
   <head>
     <title>Gardening</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/one_page_website.css">
   </head>
   <body>
     
