--- a/final-project/index.html
+++ b/final-project/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="./stylesheets/styles.css">
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
 
     <title>Portfolio</title>
   </head>
@@ -39,15 +39,32 @@
     <div class="row" id="about">
       <!-- NEEDS BOOTSTRAP FOR 2 COLUMNS -->
       <!-- Left Column -->
-      <div class="column_2">
-        <img src="" alt="">
+      <div class="column">
+        <img src="./img/image_1.png" alt="Depression in One Picture" id="depression" class="center">
       </div>
       <!-- Right Column -->
-      <div class="column_1">
+      <div class="column">
         <h1>About</h1>
         <p>
-          <!-- NEEDS CONTENT -->
+          Filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler.
         </p>
+        <table>
+          <tr>
+            <th>Filler</th>
+            <th>Filler</th>
+            <th>Filler</th>
+          </tr>
+          <tr>
+            <td>Filler</td>
+            <td>Filler</td>
+            <td>Filler</td>
+          </tr>
+          <tr>
+            <td>Filler</td>
+            <td>Filler</td>
+            <td>Filler</td>
+          </tr>
+        </table>
       </div>
     </div>
     <!-- END ABOUT -->
@@ -55,14 +72,14 @@
     <!-- GITHUB -->
     <div class="row" id="github">
       <!-- Left -->
-      <div class="column_1">
+      <div class="column">
         <h1>GitHub</h1>
         <p>
           <!-- NEEDS CONTENT -->
         </p>
       </div>
       <!-- Right -->
-      <div class="column_2">
+      <div class="column">
         <a href="" target="_blank"><img src="" alt=""></a>
       </div>
     </div>
@@ -71,11 +88,14 @@
     <!-- CONTACT -->
     <div class="row" id="contact">
       <!-- contact image, Left Column -->
-      <div class="column_2 column_tall">
-        <img src="" alt="">
+      <div class="column column_tall overlay_container">
+        <img src="./img/image_2.png" alt="Business" class="overlay_image">
+        <div class="overlay">
+          <div class="text">Hello, world!</div>
+        </div>
       </div>
       <!-- Contact Form, Right Column -->
-      <div class="column_1 column_tall">
+      <div class="column column_tall">
         <h1>Contact</h1>
         <form action="" method="POST">
           <label>Name:</label>
@@ -84,17 +104,21 @@
             <input type="text" id="Email" name="Email" placeholder="Please enter your email here">
           <label>Message:</label>
             <input type="text" id="Message" name="Message" placeholder="Please write your message here">
-            <input type="submit" value="SUBMIT">
+            <input type="submit" value="Submit">
         </form>
       </div>
     </div>
     <!-- END CONTACT -->
 
     <!-- FOOTER -->
-    <footer>
+    <footer class="center">
       <p>
-        <p class="center"></p>
+        <p>This is the footer.</p>
         <br>
+        <video controls muted autoplay loop>
+          <source src="./img/video.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
       </p>
     </footer>
 
