--- a/final-project/index.html
+++ b/final-project/index.html
@@ -1,145 +1,119 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<html>
+    <!--Head-->
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width" />
+        <title>Tech Academy Portfolio</title>
+        <link rel="stylesheet" type="text/css" href="./css/styles.css">
+    </head>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="./css/styles.css">
-
-    <title>Portfolio</title>
-  </head>
-  <body class="background">
-    
-    <!-- NAVBAR -->
-    <div class="navbar">
-      <a class="active" href="#home">Home</a>
-      <a href="#about">About</a>
-      <a href="#github">GitHub</a>
-      <a href="#contact">Contact</a>
-    </div>
-    <!--END NAVBAR -->
-
-    <!-- Breaks between navbar and first heading -->
-    <br><br>
-
-    <!-- BACKGROUND VIDEO -->
-    <div id="home">
-      <video autoplay muted loop id="">
-        <source src="" type="video/mp4">
-        <!-- Display message if video fails -->
-        Your browser does not support HTML5 video.
-      </video>
-    </div>
-    <!-- END BACKGROUND VIDEO -->
-
-    <!-- ABOUT -->
-    <div class="row" id="about">
-      <!-- NEEDS BOOTSTRAP FOR 2 COLUMNS -->
-      <!-- Left Column -->
-      <div class="column">
-        <div class="container">
-          <img src="./img/image_1.png" alt="Depression in One Picture" id="depression" class="center">
-          <div class="centered">Centered</div>
+    <!--Body-->
+    <body class="Background">
+        
+        <!--Navbar-->
+        <div class="Navbar">
+            <a class="active" href="#Home">Home</a>
+            <a href="#About">About</a>
+            <a href="#GitHub">GitHub</a>
+            <a href="#Contact">Contact</a>
         </div>
-      </div>
-      <!-- Right Column -->
-      <div class="column">
-        <h1>About</h1>
-        <p>
-          Filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler.
-        </p>
-        <table>
-          <tr>
-            <th>Filler</th>
-            <th>Filler</th>
-            <th>Filler</th>
-          </tr>
-          <tr>
-            <td>Filler</td>
-            <td>Filler</td>
-            <td>Filler</td>
-          </tr>
-          <tr>
-            <td>Filler</td>
-            <td>Filler</td>
-            <td>Filler</td>
-          </tr>
-        </table>
-      </div>
-    </div>
-    <!-- END ABOUT -->
 
-    <!-- GITHUB -->
-    <div class="row" id="github">
-      <!-- Left -->
-      <div class="column">
-        <h1>GitHub</h1>
-        <p>
-          <!-- NEEDS CONTENT -->
-        </p>
-      </div>
-      <!-- Right -->
-      <div class="column">
-        <a href="" target="_blank"><img src="" alt=""></a>
-      </div>
-    </div>
-    <!-- END GITHUB -->
-
-    <!-- CONTACT -->
-    <div class="row" id="contact">
-      <!-- contact image, Left Column -->
-      <div class="column column_tall overlay_container">
-        <img src="./img/image_2.png" alt="Business" class="overlay_image">
-        <div class="overlay">
-          <div class="text">Hello, world!</div>
-        </div>
-      </div>
-      <!-- Contact Form, Right Column -->
-      <div class="column column_tall">
-        <h1>Contact</h1>
-        <form action="" method="POST">
-          <div class="form_element">
-            <label>Name:</label>
-            <input type="text" placeholder="Please enter your name here">
-          </div>
-          <div class="form_element">
-            <label>Email:</label>
-            <input type="text" id="Email" name="Email" placeholder="Please enter your email here">
-          </div>
-          <div class="form_element">
-            <label>Message:</label>
-            <input type="text" id="Message" name="Message" placeholder="Please write your message here">
-          </div>
-            <input type="submit" value="Submit">
-        </form>
-      </div>
-    </div>
-    <!-- END CONTACT -->
-
-    <!-- FOOTER -->
-    <footer class="center">
-      <p>
-        <p>This is the footer.</p>
+        <!--Breaks inserted to add space between navbar and the first heading-->
         <br>
-        <video controls muted autoplay loop>
-          <source src="./img/video.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-      </p>
-    </footer>
+        <br>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  </body>
-  <script>
-    'undefined'=== typeof _trfq || (window._trfq = []);
-    'undefined'=== typeof _trfd && (window._trfd=[]),_trfd.push({'tccl.baseHost':'secureserver.net'}),_trfd.push({'ap':'cpsh'},{'server':'a2plcpnl0302'}) // Monitoring performance to make your website faster. If you want to opt-out, please contact web hosting support.
-  </script>
-  <script src='https://img1.wsimg.com/tcc/tcc_l.combined.1.0.6.min.js'></script>
-</html>
+        <!--Background video-->
+        <div id="Home">
+            <video autoplay muted loop id="Typing_Video">
+                <source src="img/video.mp4" type="video/mp4">
+                <!--Display message if video fails to run-->
+                Your browser does not support HTML5 video.
+            </video>
+        </div>
+
+        <!--Video text-->
+        <div class="Video_Text">
+            <h1 class="white-text">Ryan Tähtinen's Portfolio</h1>
+            <strong>
+                <p class="center">
+                    <q>The computer programmer is a creator of universes for which he alone is the lawgiver.
+                        <br>No playwright, no stage director, no emperor, however powerful, has ever exercised such absolute authority to arrange a stage or
+                        <br>field of battle and to command such unswervingly dutiful actors or troops.
+                    </q>
+                    <br> -Joseph Weizenbaum
+                    <br>
+                    <br> My name is Ryan. Welcome to my portfolio website. On it, I will tell you about my background and experience.
+                    <br>
+                    <br> Thank you for stopping by and enjoy! 
+                </p>
+            </strong>
+        </div>
+
+        <!--About section-->
+        <div class="Row" id="About">
+            <!--Left column-->
+            <div class="Column_2">
+                <img src="img/image_1.png" alt="Depression">
+            </div>
+            <!--Right column-->
+            <div class="Column_1">
+                <h1>About</h1>
+                <p>
+                    I am a software developer who loves to code!
+                    <br>
+                    <br>I am a graduate of <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy</a>’s Software Developer Boot Camp, and trained and experienced in the following web and programming languages: HTML, CSS, JavaScript, SQL, C# and more. 
+                    <br>
+                    <br>I am a full-stack developer and would love to work with you on your project. <a href="#Contact">Contact</a> me below!
+                </p>
+            </div>
+        </div>
+
+        <!--GitHub section-->
+        <div class="Row" id="GitHub">
+            <!--Left column-->
+            <div class="Column_1">
+                <h1>GitHub</h1>
+                <p>
+                    You can view my coding projects on my GitHub profile here:
+                    <br>
+                    <p class="center"><a href="https://github.com/BilboTook" target="_blank">BilboTook's Github</a></p>
+                </p>
+            </div>
+            <!--Right column-->
+            <div class="Column_2">
+                <a href="https://github.com/the-tech-academy" target="_blank"><img src="img/GitHub.png" alt="GitHub Logo"></a>
+            </div>
+        </div>
+
+        <!--Contact section-->
+        <div class="Row" id="Contact">
+            <!--Contact image, left column-->
+            <div class="Column_2 Column_tall">
+                <img src="img/image_2.png" alt="Contact_Image">
+            </div>
+            <!--Contact form, right column-->
+            <div class="Column_1 Column_tall">
+                <h1>Contact</h1>
+                <!--This specifies where and how to send the form data; we are leaving it blank-->
+                <form action="https://formspree.io/f/mrgolqyv" method="POST">
+                    <label>Name:</label>
+                        <input type="text" placeholder="Please enter your name here">
+                    <label>Email:</label>
+                        <input type="text" id="Email" name="Email" placeholder="Please enter your email here">
+                    <label>Message:</label>
+                        <input type="text" id="Message" name="Message" placeholder="Please write your message here">
+                        <input type="submit" value="SUBMIT">
+                </form>
+            </div>
+        </div>
+
+        <!--Footer section-->
+        <footer>
+            <p>
+                <p class="center">&copy Prosper Consulting Inc., <a href="https://www.learncodinganywhere.com/" target="_blank">The Tech Academy</a></p>
+                <br>
+            </p>
+        </footer>
+    </body>
+<script>'undefined'=== typeof _trfq || (window._trfq = []);'undefined'=== typeof _trfd && (window._trfd=[]),_trfd.push({'tccl.baseHost':'secureserver.net'}),_trfd.push({'ap':'cpsh'},{'server':'a2plcpnl0302'}) // Monitoring performance to make your website faster. If you want to opt-out, please contact web hosting support.</script><script src='https://img1.wsimg.com/tcc/tcc_l.combined.1.0.6.min.js'></script></html>
